feat: more stuff

--- a/game-one.html
+++ b/game-one.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Game One | AAATUM GAMES</title>
-
-    <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/game-page.css" />
+    <link rel="stylesheet" href="css/game-page.css" />
 </head>
+
 <body>
 
 <div id="navbar"></div>
@@ -74,7 +70,7 @@
     <!-- Tech -->
     <section class="game-section">
         <h2>Tools & Technologies</h2>
-        <p>Unity · C# · Photoshop</p>
+        <p>Godot · Aseprite · Photoshop</p>
     </section>
 
 </main>
