feat: game pages modular system

--- a/games.html
+++ b/games.html
@@ -23,55 +23,16 @@
     <button class="filter-btn" data-filter="programming">Programming</button>
 </section>
 
-
 <main class="games-page">
-    <div class="games-grid">
-
-        <a href="game-one.html" class="game-link">
-            <div class="game-card"
-                data-tags="jam programming"
-                style="background-image: url('assets/game1.png');">
-
-                <div class="game-overlay">
-                    <h3>Game One</h3>
-                    <p>Game Jam · Programming</p>
-                </div>
-
-            </div>
-        </a>
-
-        <a href="game-one.html" class="game-link">
-            <div class="game-card"
-                data-tags="jam programming"
-                style="background-image: url('assets/game1.png');">
-
-                <div class="game-overlay">
-                    <h3>Game One</h3>
-                    <p>Game Jam · Programming</p>
-                </div>
-
-            </div>
-        </a>
-
-        <a href="game-one.html" class="game-link">
-            <div class="game-card"
-                data-tags="jam programming"
-                style="background-image: url('assets/game1.png');">
-
-                <div class="game-overlay">
-                    <h3>Game One</h3>
-                    <p>Game Jam · Programming</p>
-                </div>
-
-            </div>
-        </a>
-
-    </div>
-
+    <div class="games-grid" id="gamesGrid"></div>
 </main>
+
 
 <div id="footer"></div>
 <script src="js/include.js"></script>
+
+<script src="js/games-data.js"></script>
+<script src="js/games-page.js"></script>
 <script src="js/games-filter.js"></script>
 
 
