feat: data update

--- a/contact.html
+++ b/contact.html
@@ -19,29 +19,19 @@
 
     <section class="contact-list">
 
-        <a class="contact-item" href="mailto:contact@email.com">
+        <a class="contact-item">
             <span class="label">Email</span>
-            <span class="value">contact@email.com</span>
+            <span class="value">isaac.dev.games@email.com</span>
         </a>
 
-        <a class="contact-item" href="https://github.com/yourusername" target="_blank">
-            <span class="label">GitHub</span>
-            <span class="value">github.com/yourusername</span>
-        </a>
-
-        <a class="contact-item" href="https://linkedin.com/in/yourusername" target="_blank">
+        <a class="contact-item" href="https://linkedin.com/in/isaac-cerejo-75v" target="_blank">
             <span class="label">LinkedIn</span>
-            <span class="value">linkedin.com/in/yourusername</span>
+            <span class="value">linkedin.com/in/isaac-cerejo-75v</span>
         </a>
 
-        <a class="contact-item" href="https://twitter.com/yourusername" target="_blank">
-            <span class="label">Twitter / X</span>
-            <span class="value">@yourusername</span>
-        </a>
-
-        <a class="contact-item" href="https://itch.io/profile/yourusername" target="_blank">
+        <a class="contact-item" href="https://aaatum-games.itch.io/" target="_blank">
             <span class="label">itch.io</span>
-            <span class="value">yourusername.itch.io</span>
+            <span class="value">aaatum-games.itch.io</span>
         </a>
 
     </section>
