--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2>Game Developer • Programmer • Artist</h2>
 
     <p class="intro">
-        I create games, tools, and interactive experiences.
+        I create games, and interactive experiences.
     </p>
 </main>
 
