--- a/portfolio.html
+++ b/portfolio.html
@@ -30,11 +30,10 @@
 
             <ul>
                 <li>Designed and implemented core gameplay mechanics</li>
-                <li>Programmed systems in Unity (C#)</li>
                 <li>Created visual effects and UI</li>
             </ul>
 
-            <span class="tags">Unity · C# · Game Design</span>
+            <span class="tags">Godot · Aseprite · Game Design</span>
         </div>
     </section>
 
