feat: home page improvment

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
 <div id="navbar"></div>
 
+<img src="assets/home-bg.png" class="top-image" />
+
 <main class="centered">
+
     <img src="assets/profile.png" alt="Profile picture" class="profile-pic" />
 
     <h1>Isaac Cerejo</h1>
@@ -18,6 +21,23 @@
         I create games, and interactive experiences.
     </p>
 </main>
+
+<section class="home-links">
+
+    <a href="about.html" class="home-card">
+        <span>About Me</span>
+    </a>
+
+    <a href="portfolio.html" class="home-card">
+        <span>Portfolio</span>
+    </a>
+
+    <a href="games.html" class="home-card">
+        <span>Games</span>
+    </a>
+
+</section>
+
 
 <div id="footer"></div>
 <script src="js/include.js"></script>
