feat: new game page

--- a/about.html
+++ b/about.html
@@ -8,14 +8,14 @@
 
 <div id="navbar"></div>
 
-<main class="intro">
-    <h1>About Me</h1>
+<section class="intro">
+    <h1>ABOUT ME</h1>
     <p>
         Game developer with experience in programming, game design,
         and technical art. Passionate about building polished systems
         and meaningful player experiences.
     </p>
-</main>
+</section>
 
 <main class="about-page">
     
