--- a/contact.html
+++ b/contact.html
@@ -8,21 +8,21 @@
 
 <div id="navbar"></div>
 
-<main class="intro">
-    <h1>Contact</h1>
+<section class="intro">
+    <h1>CONTACTS</h1>
     <p>
         Feel free to reach out for collaborations, job opportunities, or questions about my work.
     </p>
-</main>
+</section>
 
 <main class="contact-page">
 
     <section class="contact-list">
 
-        <a class="contact-item">
+        <div class="contact-item">
             <span class="label">Email</span>
             <span class="value">isaac.dev.games@email.com</span>
-        </a>
+        </div>
 
         <a class="contact-item" href="https://linkedin.com/in/isaac-cerejo-75v" target="_blank">
             <span class="label">LinkedIn</span>
