--- a/games.html
+++ b/games.html
@@ -8,12 +8,12 @@
 
 <div id="navbar"></div>
 
-<main class="intro">
-    <h1>Games</h1>
+<section class="intro">
+    <h1>GAMES</h1>
     <p>
         Selected projects since 2023
     </p>
-</main>
+</section>
 
 <section class="games-filters">
     <button class="filter-btn active" data-filter="all">All</button>
