--- a/index.html
+++ b/index.html
@@ -8,35 +8,34 @@
 
 <div id="navbar"></div>
 
-<img src="assets/home-bg.png" class="top-image" />
+<main class="home">
 
-<main class="centered">
+    <!-- Hero / Cover -->
+    <section class="home-hero">
+        <img src="assets/home-bg.png" alt="" />
+    </section>
 
-    <img src="assets/profile.png" alt="Profile picture" class="profile-pic" />
+    <!-- Identity -->
+    <section class="home-intro">
+        <img src="assets/profile.png" alt="Profile picture" class="profile-pic" />
 
-    <h1>Isaac Cerejo</h1>
-    <h2>Game Developer • Programmer • Artist</h2>
+        <h1>ISAAC CEREJO</h1>
+        <h2>Game Developer • Programmer • Artist</h2>
 
-    <p class="intro">
-        I create games, and interactive experiences.
-    </p>
+        <p class="intro">
+            I create games and interactive experiences.
+        </p>
+    </section>
+
+    <!-- Navigation cards -->
+    <section class="home-links">
+        <a href="about.html" class="home-card"><span>About Me</span></a>
+        <a href="portfolio.html" class="home-card"><span>Portfolio</span></a>
+        <a href="games.html" class="home-card"><span>Games</span></a>
+    </section>
+
 </main>
 
-<section class="home-links">
-
-    <a href="about.html" class="home-card">
-        <span>About Me</span>
-    </a>
-
-    <a href="portfolio.html" class="home-card">
-        <span>Portfolio</span>
-    </a>
-
-    <a href="games.html" class="home-card">
-        <span>Games</span>
-    </a>
-
-</section>
 
 
 <div id="footer"></div>
