--- a/portfolio.html
+++ b/portfolio.html
@@ -8,12 +8,12 @@
 
 <div id="navbar"></div>
 
-<main class="intro">
-    <h1>Portfolio</h1>
+<section class="intro">
+    <h1>PORTFOLIO</h1>
     <p>
         Feel free to reach out for collaborations, job opportunities, or questions about my work.
     </p>
-</main>
+</section>
 
 <main class="portfolio-page">
 
