--- a/portfolio.html
+++ b/portfolio.html
@@ -15,54 +15,16 @@
     </p>
 </section>
 
-<main class="portfolio-page">
+<main class="portfolio-page" id="portfolioPage"></main>
 
-    <!-- Project -->
-    <section class="portfolio-item">
-        <img src="assets/game1.png" alt="Game One screenshot">
-
-        <div class="portfolio-info">
-            <h2>Game One</h2>
-            <p>
-                Solo-developed project focused on gameplay systems, player feedback,
-                and visual polish.
-            </p>
-
-            <ul>
-                <li>Designed and implemented core gameplay mechanics</li>
-                <li>Created visual effects and UI</li>
-            </ul>
-
-            <span class="tags">Godot · Aseprite · Game Design</span>
-        </div>
-    </section>
-
-    <!-- Project -->
-    <section class="portfolio-item">
-        <img src="assets/game2.png" alt="Game Two screenshot">
-
-        <div class="portfolio-info">
-            <h2>Game Two</h2>
-            <p>
-                Experimental prototype exploring new mechanics and fast iteration.
-            </p>
-
-            <ul>
-                <li>Rapid prototyping and iteration</li>
-                <li>Gameplay tuning and balancing</li>
-                <li>Technical problem-solving</li>
-            </ul>
-
-            <span class="tags">Prototype · Gameplay · Systems</span>
-        </div>
-    </section>
-
-    <!-- Repeat for other games -->
-
-</main>
 
 <div id="footer"></div>
 
 <script src="js/include.js"></script>
+
+<script src="js/games-data.js"></script>
+<script src="js/portfolio.js"></script>
+
+
 </body>
 </html>
