feat: removed portfolio for now

--- a/game.html
+++ b/game.html
@@ -15,7 +15,7 @@
 <script src="../js/include.js"></script>
 <script src="../js/games-data.js"></script>
 <script src="../js/game-page.js"></script>
-
+<script src="js/lightbox.js"></script>
 
 </body>
 </html>
