--- a/games.html
+++ b/games.html
@@ -11,7 +11,7 @@
 <section class="intro">
     <h1>GAMES</h1>
     <p>
-        Selected projects since 2023
+        A selection of projects since 2023
     </p>
 </section>
 
@@ -34,6 +34,8 @@
 <script src="js/games-data.js"></script>
 <script src="js/games-page.js"></script>
 <script src="js/games-filter.js"></script>
+
+
 
 
 </body>
