--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 
     <!-- Navigation cards -->
     <section class="home-links">
-        <a href="about.html" class="home-card"><span>About Me</span></a>
-        <a href="portfolio.html" class="home-card"><span>Portfolio</span></a>
         <a href="games.html" class="home-card"><span>Games</span></a>
+        <a href="about.html" class="home-card"><span>About Me</span></a>
+        <a href="contact.html" class="home-card"><span>Contact</span></a>
+        
     </section>
 
 </main>
