--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,9 @@
 
 <main class="portfolio-page" id="portfolioPage"></main>
 
+<div id="lightbox" class="lightbox">
+    <img id="lightbox-img" alt="">
+</div>
 
 <div id="footer"></div>
 
@@ -24,7 +27,7 @@
 
 <script src="js/games-data.js"></script>
 <script src="js/portfolio.js"></script>
-
+<script src="js/lightbox.js"></script>
 
 </body>
 </html>
