feat: info correction

--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,9 @@
 <div id="navbar"></div>
 
 <section class="intro">
-    <h1>CONTACTS</h1>
+    <h1>CONTACT</h1>
     <p>
-        Feel free to reach out for collaborations, job opportunities, or questions about my work.
+        Feel free to reach out for projects, collaborations, or questions about my work.
     </p>
 </section>
 
@@ -32,6 +32,11 @@
         <a class="contact-item" href="https://aaatum-games.itch.io/" target="_blank">
             <span class="label">itch.io</span>
             <span class="value">aaatum-games.itch.io</span>
+        </a>
+
+        <a class="contact-item" href="https://aaatum-games.itch.io/" target="_blank">
+            <span class="label">Instagram</span>
+            <span class="value">@aaatum.games</span>
         </a>
 
     </section>
