--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="assets/profile.png" alt="Profile picture" class="profile-pic" />
 
         <h1>ISAAC CEREJO</h1>
-        <h2>Game Developer • Programmer • Artist</h2>
+        <h2>2D Artist • Game Developer</h2>
 
         <p class="intro">
             I create games and interactive experiences.
