--- a/game.html
+++ b/game.html
@@ -11,10 +11,10 @@
 <main class="game-page" id="gamePage"></main>
 
 <div id="footer"></div>
+<script src="js/include.js"></script>
 
-<script src="../js/include.js"></script>
-<script src="../js/games-data.js"></script>
-<script src="../js/game-page.js"></script>
+<script src="js/games-data.js"></script>
+<script src="js/game-page.js"></script>
 <script src="js/lightbox.js"></script>
 
 </body>
