--- a/backup/game.html
+++ b/backup/game.html
@@ -12,7 +12,7 @@
 
     <!-- Hero -->
     <section class="game-hero">
-        <img src="../assets/game1.png" alt="Game One cover">
+        <img src="assets/game1.png" alt="Game One cover">
 
         <div class="game-meta">
             <h1>Game One</h1>
@@ -45,10 +45,10 @@
             </button>
 
             <div class="carousel" id="screenshotCarousel">
-                <img src="../assets/game1.png" alt="Screenshot 1">
-                <img src="../assets/game1.png" alt="Screenshot 2">
-                <img src="../assets/game1.png" alt="Screenshot 3">
-                <img src="../assets/game1.png" alt="Screenshot 4">
+                <img src="assets/game1.png" alt="Screenshot 1">
+                <img src="assets/game1.png" alt="Screenshot 2">
+                <img src="assets/game1.png" alt="Screenshot 3">
+                <img src="assets/game1.png" alt="Screenshot 4">
             </div>
 
             <button class="carousel-btn right" aria-label="Next screenshot">
@@ -77,7 +77,7 @@
 
 <div id="footer"></div>
 
-<script src="../js/include.js"></script>
+<script src="js/include.js"></script>
 
 <script>
     const carousel = document.getElementById("screenshotCarousel");
